# misinfo-general

./: .gitignore  README.md  env.yaml  env_snellius.yaml  pyproject.toml
assets/: dataset-on-hf-lg-dark.svg:Zone.Identifier
config/: llm_inference.yaml  objectivity_annotation.yaml  test_covid.yaml  test_dataset_map.yaml  test_limited_publisher.yaml  test_misinfo_type.yaml  test_pol_bias.yaml  test_publisher.yaml  test_publisher_prediction.yaml  test_topic.yaml  test_uniform.yaml  train.yaml  uniform.yaml
data/: README_dataverse.md  README_huggingface.md
scripts/: install_env.job  llm_inference.job  sweep_config.yaml  sweep_uniform.job  test_covid.job  test_dataset_effect.job  test_dataset_map.job  test_misinfo_type_consps.job  test_misinfo_type_qs.job  test_pol_bias_left.job  test_pol_bias_right.job  test_publisher.job  test_publisher_prediction.job  test_topic.job  test_uniform.job  test_uniform_val.job  train_covid.job  train_dataset_effect.job  train_dataset_map.job  train_misinfo_type_array_conspsc.job  train_misinfo_type_array_qs.job  train_pol_bias_left.job  train_pol_bias_right.job  train_publisher_array.job  train_publisher_prediction.job  train_topic_array.job  train_uniform.job  train_uniform_array.job
src/: annotate_articles_for_emotion.py  annotate_articles_for_objectivity.py  llm_inference.py  sweep_uniform.py  test_covid.py  test_dataset_map.py  test_limited_publisher.py  test_misinfo_type.py  test_pol_bias.py  test_publisher.py  test_publisher_prediction.py  test_topic.py  test_uniform.py  train.py  train_publisher_prediction.py  train_uniform.py
(+47 files in other folders)
